--- a/MultiDomainRAG/src/Dockerfile
+++ b/MultiDomainRAG/src/Dockerfile
@@ -10,4 +10,5 @@ COPY src/ /app
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+# CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
