update comment in yml file

--- a/MultiDomainRAG/docker-compose.yml
+++ b/MultiDomainRAG/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     ports:  
       - "8000:8000"
     volumes:
-      - ./data:/app/data          # Mount your data folder
+      - ./data:/app/data          # Mount your data folder where pdf and xml will be saved
